fix: fixing icon sizes on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -220,18 +220,26 @@ section {
 }
 
 i {
+  display: inline-block;
   width: 1em;
+  height: 1em;
   margin-right: 0.5em;
   margin-left: -1.5em;
-  overflow: hidden;
-  font-size: 0.8em;
+  font-size: 1em;
   text-align: right;
+  vertical-align: baseline;
+}
+
+i svg {
+  width: 100%;
+  max-height: 100%;
 }
 
 @media (min-width: 42em) {
   i {
     display: block;
     float: left;
+    font-size: 0.8em;
   }
 }
 
